Seeing if this will solve the wrapping hourglass problem (#206)

--- a/GeoAngular/app/styles/comp.css
+++ b/GeoAngular/app/styles/comp.css
@@ -96,7 +96,7 @@ a {
 
 #MapUpperRightToolbarWrapper .search {
     font-size: 20px;
-    padding: 4px 17px;
+    padding: 2px 17px;
     border-left: 1px solid #fff;
     height: 34px;
     min-width: 55px;
